# OZI.wrap

./: .gitignore  CHANGELOG.md  LICENSE.txt  PKG-INFO  README.rst  meson.build  meson.options  pyproject.toml  requirements.in
ozi_wrap/: __init__.py  __init__.pyi  meson.build
tests/: meson.build
